--- a/src/app/home/history/history.component.html
+++ b/src/app/home/history/history.component.html
@@ -1,21 +1,54 @@
-<br>
-<!-- <button class="btn btn-primary" (click)="postGame()">Post game</button> -->
-<!-- <button class="btn btn-primary" (click)="getGames()">Get games</button> -->
-<div *ngIf="selectedTab===0">
-  <button mat-raised-button color="primary" (click)="createGame()">Create game</button>
+<div class="modal" 
+        id="deleteModal" 
+        tabindex="-1" 
+        role="dialog" 
+        aria-labelledby="deleteModalLabel" 
+        aria-hidden="true"
+        [style.display]="confirmDelete ? 'block' : 'none'">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 *ngIf="selectedTab===0" class="modal-title" id="deleteModalLabel">
+          Delete {{toDeleteTeams?.team1Name}}'s and {{toDeleteTeams?.team2Name}}'s game?
+        </h5>
+        <h5 *ngIf="selectedTab===1" class="modal-title text-center w-100" id="deleteModalLabel">
+          Delete hand? <br>
+          <span>Bettor: {{toDeleteHand?.bettor}}</span><br>
+          <span>Bet: {{toDeleteHand?.bet}}</span> <br>
+          <span>Suit: {{toDeleteHand?.suit}}</span><br>            
+        </h5>
+        <button type="button" class="close"  data-dismiss="modal" aria-label="Close"
+                (click)="toggleDelete()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                (click)="toggleDelete()">Cancel</button>
+        <button *ngIf="selectedTab===0" type="button" class="btn btn-danger"
+                (click)="deleteGame()">Delete</button>
+        <button *ngIf="selectedTab===1" type="button" class="btn btn-danger"
+                (click)="deleteHand()">Delete</button>
+      </div>
+    </div>
+  </div>
 </div>
 
-<!-- <div *ngIf="games.length === 0">
-  <button mat-raised-button color="primary" (click)="createGame()">Create games</button>
-</div> -->
-
-<div *ngIf="selectedTab===1">
-  <button mat-raised-button color="primary" (click)="createHand()">+ New Hand</button>
+<br>
+<div>
+  <button *ngIf="selectedTab===0"
+          mat-raised-button color="primary" (click)="createGame()"
+          [disabled]="editMode">Create game</button>
+  <button *ngIf="selectedTab===1" 
+          mat-raised-button color="primary" (click)="createHand()"
+          [disabled]="editMode">+ New Hand</button>
+  <mat-slide-toggle class="float-right" [checked]="editMode" color="warn" 
+          (change)="toggleEdit()">Toggle Edit</mat-slide-toggle>
 </div>
+
 <br>
 
-<mat-tab-group class="tab-group" [(selectedIndex)]="selectedTab"
-               (selectedIndexChange)="indexChanged($event)">
+<mat-tab-group class="tab-group" [(selectedIndex)]="selectedTab">
   <mat-tab>
     <ng-template mat-tab-label>
       <span>Games</span>
@@ -44,8 +77,9 @@
               game.value.teams?.team2Name.substring(0,9)+'...' :
               game.value.teams?.team2Name}}</td>
           <td class="mat-cell">{{game.value.teams?.team2Score}}</td>
-          <td class="mat-cell" *ngIf="editMode">
-            <button class="btn btn-sm btn-danger" (click)="deleteGame(i)">X</button>
+          <td class="mat-cell" style="padding:0 10px;" *ngIf="editMode">
+            <button class="btn btn-sm btn-danger" 
+            (click)="updateDeleteItems(game.value.teams,i); toggleDelete(); $event.stopPropagation()">X</button>
           </td>
         </tr>
       </tbody>
@@ -87,6 +121,10 @@
           </td>
           <td class="mat-cell" [ngStyle]="getColors(hand, 1)">{{hand.team1Score}}</td>
           <td class="mat-cell" [ngStyle]="getColors(hand, 2)">{{hand.team2Score}}</td>
+          <td class="mat-cell" style="padding:0 10px;" *ngIf="editMode">
+            <button class="btn btn-sm btn-danger" 
+            (click)="updateDeleteHand(hand, i); toggleDelete(); $event.stopPropagation();">X</button>
+          </td>
         </tr>
         <tr class="mat-row border-top" >
           <td class="mat-cell"></td>
@@ -135,7 +173,7 @@
                 (change)="changed = true"
                 changed = true/>                 
         <button mat-button *ngIf="testHand.bet" 
-                matSuffix mat-icon-button aria-label="Clear" (click)="testHand.bet=80;changed=true;">
+                matSuffix mat-icon-button aria-label="Clear" (click)="testHand.bet='';changed=true;">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>   
@@ -229,21 +267,21 @@
       </mat-form-field>
 
       <br>
+      <!-- Removed the below condition because when changing team name that was also
+      the bettor, button remained disabled -->
+      <!-- (testHand.bettor !== team1 && 
+        testHand.bettor !== team2) || -->
       <fieldset #field [disabled]="!changed || testHand.bet < 80 || 
         team1==='' || team2==='' ||
         testHand.team1Score < 0 || testHand.team1Score > 162 || 
         testHand.team2Score < 0 || testHand.team2Score > 162 || 
-        (testHand.team1Score + testHand.team2Score !== 162) ||
-        (testHand.bettor !== team1 && 
-        testHand.bettor !== team2) ||
+        (testHand.team1Score + testHand.team2Score !== 162) ||        
         testHand.bet > 162 || !testHand.bettor || 
         testHand.team1Bonus < 0 || testHand.team2Bonus < 0">
         <button mat-raised-button color="primary"
           [disabled]="field.disabled"
-          (click)="updateGame()">{{newHand ? 'Create Hand' : currentGameId ? 'Update' : 'Create Game'}}</button>
-        <!-- <button mat-raised-button color="primary" *ngIf="!currentGameId"
-          [disabled]="field.disabled"
-          (click)="createNewGame()">Create Game</button> -->
+          (click)="updateGame()">
+          {{newHand ? 'Create Hand' : currentGameId ? 'Update' : 'Create Game'}}</button>
       </fieldset>
         
   </mat-tab>
